--- a/.todo/todo.txt
+++ b/.todo/todo.txt
@@ -8,4 +8,5 @@
 2024-04-17 add: python-cli project type
 2024-04-17 maybe change --python to --type
 2024-04-17 add --desc option
-2024-04-17 add --version option
+2024-04-17 add list subcommand to list project types
+2024-04-17 python: make pyversion come from envvar & configurable
