--- a/.todo/todo.txt
+++ b/.todo/todo.txt
@@ -1,4 +1,3 @@
-2024-03-09 maybe add license
 2024-04-17 add: python-cli project type
 2024-04-17 add list subcommand to list project types  @later
 2024-04-17 python: make pyv come from envvar & configurable
@@ -9,3 +8,7 @@
 2024-04-17 python: try/except around asdf where in case version is not installed
 2024-04-17 python: add step to verify that it worked
 2024-04-17 add subcommad like 'change pyvesion' @maybe
+2024-04-17 basic: expand README @maybe
+2024-04-17 basic: rename sources/bare -> sources/basic
+2024-04-17 basic: make a BasicProject subclass of Project @maybe
+2024-04-17 projects: move all project [sub/]classes into a projects dir
