--- a/.todo/todo.txt
+++ b/.todo/todo.txt
@@ -28,3 +28,5 @@
 2024-06-18 @feature add --github-username; use this in README
 2024-06-18 @bare @feature add licence to README if present
 2024-06-18 @feature @python add bp generate(?) [test|class]
+2024-12-31 @feature @basic commit initial version to git (?)
+2024-12-31 @feature @python run `poetry install`
